--- a/sites/site2/form/form.css
+++ b/sites/site2/form/form.css
@@ -58,3 +58,9 @@
     border-radius: 4px;
     font-size: 16px;
 }
+#form-button:hover {
+    background-color: var(--cl-dark-blue);
+}
+#form-button:disabled {
+    background-color: var(--cl-border);
+}
